tests/sema/fail/v41_fail_unit_sum_bare_variant.ep
# COMPILE_FAIL_CONTAINS: undefined variable Ready
type State = Ready | Done

fun main(): void {
    let state: State = Ready
}
